export const snapshot = {};

snapshot[`Document View Command - Help Text 1`] = `
stdout:
"
Usage: view <docId>

Description:

  View document details

Options:

  -h, --help               - Show this help.                                  
  -w, --web                - Open in web browser                              
  -a, --app                - Open in Linear.app                               
  --no-comments            - Exclude comments from output                     
  --plain                  - Disable colored output                           
  --no-pager               - Disable automatic paging                         
  --human                  - Output in human-readable format (default: JSON)  
  --format       <format>  - Output format: text|json                         

"
stderr:
""
`;

snapshot[`Document View Command - Markdown Rendering 1`] = `
stdout:
'{
  "success": true,
  "operation": "view",
  "document": {
    "id": "doc-123",
    "title": "API Design Document",
    "slugId": "api-design-document",
    "url": "https://linear.app/test/document/api-design-document",
    "icon": null,
    "color": null,
    "content": "# API Design\\\\n\\\\nThis document describes the API design for the new backend service.\\\\n\\\\n## Overview\\\\n\\\\nThe API will use REST principles with JSON payloads.",
    "creator": {
      "id": "user-alice",
      "name": "Alice Smith"
    },
    "updatedBy": {
      "id": "user-alice",
      "name": "Alice Smith"
    },
    "project": {
      "id": "project-789",
      "name": "Backend Platform",
      "url": "https://linear.app/test/project/backend-platform"
    },
    "initiative": null,
    "createdAt": "2024-01-10T10:00:00Z",
    "updatedAt": "2024-01-15T14:30:00Z",
    "comments": []
  }
}
'
stderr:
""
`;

snapshot[`Document View Command - JSON Output 1`] = `
stdout:
'{
  "success": true,
  "operation": "view",
  "document": {
    "id": "doc-456",
    "title": "Meeting Notes",
    "slugId": "meeting-notes",
    "url": "https://linear.app/test/document/meeting-notes",
    "icon": null,
    "color": null,
    "content": "# Meeting Notes\\\\n\\\\n- Discussed API design\\\\n- Next steps: prototype",
    "creator": {
      "id": "user-bob",
      "name": "Bob Jones"
    },
    "updatedBy": {
      "id": "user-bob",
      "name": "Bob Jones"
    },
    "project": null,
    "initiative": null,
    "createdAt": "2024-01-12T09:00:00Z",
    "updatedAt": "2024-01-12T11:30:00Z",
    "comments": []
  }
}
'
stderr:
""
`;

snapshot[`Document View Command - No Project Linked 1`] = `
stdout:
'{
  "success": true,
  "operation": "view",
  "document": {
    "id": "doc-solo",
    "title": "Standalone Document",
    "slugId": "standalone-document",
    "url": "https://linear.app/test/document/standalone-document",
    "icon": null,
    "color": null,
    "content": "# Standalone\\\\n\\\\nThis document is not linked to any project.",
    "creator": {
      "id": "user-charlie",
      "name": "Charlie Brown"
    },
    "updatedBy": {
      "id": "user-charlie",
      "name": "Charlie Brown"
    },
    "project": null,
    "initiative": null,
    "createdAt": "2024-01-14T15:00:00Z",
    "updatedAt": "2024-01-14T15:00:00Z",
    "comments": []
  }
}
'
stderr:
""
`;

snapshot[`Document View Command - Empty Content 1`] = `
stdout:
'{
  "success": true,
  "operation": "view",
  "document": {
    "id": "doc-empty",
    "title": "New Document",
    "slugId": "new-document",
    "url": "https://linear.app/test/document/new-document",
    "icon": null,
    "color": null,
    "content": null,
    "creator": {
      "id": "user-alice",
      "name": "Alice Smith"
    },
    "updatedBy": {
      "id": "user-alice",
      "name": "Alice Smith"
    },
    "project": {
      "id": "project-123",
      "name": "Mobile App",
      "url": "https://linear.app/test/project/mobile-app"
    },
    "initiative": null,
    "createdAt": "2024-01-16T08:00:00Z",
    "updatedAt": "2024-01-16T08:00:00Z",
    "comments": []
  }
}
'
stderr:
""
`;

snapshot[`Document View Command - By Slug ID 1`] = `
stdout:
'{
  "success": true,
  "operation": "view",
  "document": {
    "id": "doc-789",
    "title": "API Design Document",
    "slugId": "api-design-document",
    "url": "https://linear.app/test/document/api-design-document",
    "icon": null,
    "color": null,
    "content": "# API Design\\\\n\\\\nDetailed specifications for the new API.",
    "creator": {
      "id": "user-alice",
      "name": "Alice Smith"
    },
    "updatedBy": {
      "id": "user-alice",
      "name": "Alice Smith"
    },
    "project": {
      "id": "project-456",
      "name": "Backend Services",
      "url": "https://linear.app/test/project/backend-services"
    },
    "initiative": null,
    "createdAt": "2024-01-10T10:00:00Z",
    "updatedAt": "2024-01-15T14:30:00Z",
    "comments": []
  }
}
'
stderr:
""
`;
